--- a/Wallboards.UI/Assets/css/signin.css
+++ b/Wallboards.UI/Assets/css/signin.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.5;
     padding-bottom: 3.5rem;
     /* padding-top: 3.5rem; */
-    padding-top: 70px;
+    padding-top: 20%;
 }
 
 .form-signin {
