--- a/Wallboards.UI/Views/Center/Index.cshtml
+++ b/Wallboards.UI/Views/Center/Index.cshtml
@@ -6,6 +6,12 @@
         .canvasjs-chart-credit {
             display: none;
         }
+        
+        .col-md-4 {
+            padding: 20px;
+            border: solid 1px #424242;
+        }
+        
     </style>
 }
 
@@ -64,12 +70,7 @@
 
             </div>
         </div>
-
-    </div>
-
-    <hr>
-
-    <div class="row">
+ 
 
         <div class="col-md-4">
             <h3>ТОП 3 товары </h3>
@@ -105,13 +106,7 @@
             <h3>Среднее кол-во участников</h3>
             <div class="bar-chart inview" id="chart11"></div> 
         </div>
-
-    </div>
-
-    <hr>
-
-    <div class="row">
-
+ 
         <div class="col-md-4">
             <h3>Кол-во сотрудников</h3>
             <div class="row">
@@ -164,9 +159,7 @@
 
         </div>
 
-    </div> 
-    
-    <hr>
+    </div>  
 
 </div>
 
@@ -244,7 +237,7 @@
                     {
                         explodeOnClick: false,
                         innerRadius: "80%",
-                        radius: "80%",
+                        radius: "90%",
                         startAngle: 270,
                         type: "doughnut",
                         dataPoints: [
