--- a/Wallboards.UI/Views/Account/Login.cshtml
+++ b/Wallboards.UI/Views/Account/Login.cshtml
@@ -25,6 +25,7 @@
 
         <form class="form-signin" action="@Url.Action("Login")" method="post">
             @Html.AntiForgeryToken()
+            @Html.ValidationBootstrap()
             <h2 class="form-signin-heading text-center">Wallboards</h2>
             <label for="inputEmail" class="sr-only">Имя пользователя</label>
             <input type="text" id="inputEmail" name="UserName" class="form-control" placeholder="Имя пользователя" required autofocus>
