--- a/Wallboards.UI/Views/Shared/_Layout.cshtml
+++ b/Wallboards.UI/Views/Shared/_Layout.cshtml
@@ -20,11 +20,15 @@
     @RenderSection("css", false)
 
 </head>
-<body> 
+<body>
+
+    <div class="page-header text-center">
+        <h1 style="border-bottom:none !important;">@ViewBag.Title</h1>
+    </div>
 
     <div class="container-fluid">
         @RenderBody()
-    </div>   
+    </div>
 
     <script src="~/assets/js/jquery-3.1.0.min.js"></script>
     <script src="~/assets/js/tether.min.js"></script>
