--- a/Wallboards.UI/Views/Center/Index.cshtml
+++ b/Wallboards.UI/Views/Center/Index.cshtml
@@ -3,14 +3,19 @@
 }
 @section css{
     <style>
-        .canvasjs-chart-credit {
-            display: none;
-        }
-
         .col-md-4 {
             padding-top: 10px;
             border: solid 1px #424242;
         }
+
+            .col-md-4 .canvasjs-chart-credit {
+                display: none;
+            }
+
+            .col-md-4 .title {
+                text-align:center;
+                color:#424242;
+            }
     </style>
 }
 
@@ -19,21 +24,19 @@
     <div class="row">
 
         <div class="col-md-4">
-            <h3>Товарооборот (млрд.сум)</h3>
-
+            <h3 class="title">Товарооборот (млрд.сум)</h3>
             <div class="spline-chart inview" id="chart1"></div>
         </div>
 
         <div class="col-md-4">
-            <h3>Кол-во поставщиков тысяч</h3>
-            <br />
+            <h3 class="title">Кол-во поставщиков тысяч</h3>
             <div class="row">
                 <div class="col-md-6 text-center">
                     <h2 class="text-center">44 465</h2>
                     <div class="area-chart inview" id="chart2"></div>
                     <h3 class="text-center">ГЗ</h3>
                 </div>
-                <div class="col-md-6 ">
+                <div class="col-md-6">
                     <h2 class="text-center">19 498</h2>
                     <div class="area-chart inview" id="chart3"></div>
                     <h3 class="text-center">КЗ</h3>
@@ -42,7 +45,7 @@
         </div>
 
         <div class="col-md-4">
-            <h3>Кол-во сделок в день </h3>
+            <h3 class="title">Кол-во сделок в день </h3>
 
             <div class="row">
 
@@ -64,71 +67,77 @@
             </div>
         </div>
 
-
         <div class="col-md-4">
-            <h3>ТОП 3 товары </h3>
+            <h3 class="title">ТОП 3 товары </h3>
 
             <div class="row">
                 <div class="col-md-4" style="border:none;">
+                    <h4 class="align-center" style="color:white;">Кондиционер</h4>
                     <div class="doughnut-chart inview" id="chart8"></div>
-                    <h4 class="align-center">Кондиционер</h4>
+                    <h4 class="align-center" style="color:#424242;">ГЗ</h4>
                 </div>
 
                 <div class="col-md-4" style="border:none;">
+                    <h4 class="align-center" style="color:white;">Автопогрузчик</h4>
                     <div class="doughnut-chart inview" id="chart9"></div>
-                    <h4 class="align-center">Автопогрузчик</h4>
+                    <h4 class="align-center" style="color:#424242;">КЗ</h4>
                 </div>
 
                 <div class="col-md-4" style="border:none;">
+                    <h4 class="align-center" style="color:white;">Краска</h4>
                     <div class="doughnut-chart inview" id="chart10"></div>
-                    <h4 class="align-center">Краска</h4>
+                    <h4 class="align-center" style="color:#424242;">Каталог</h4>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4">
-            <h3>Экономия (млрд.сум)</h3>
+            <h3 class="title">Экономия (млрд.сум)</h3>
             <div class="spline-chart inview" id="chart16"></div>
         </div>
 
         <div class="col-md-4">
-            <h3>Среднее кол-во участников</h3>
+            <h3 class="title">Среднее кол-во участников</h3>
             <div class="bar-chart inview" id="chart11"></div>
         </div>
 
         <div class="col-md-4">
-            <h3>Кол-во сотрудников</h3>
+            <h3 class="title">Кол-во сотрудников</h3>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card card-block">
-                        <h5 class="card-title text-center">Специалисти</h5>
-                        <div class="area-chart inview">
-                            <h2 style="background-color: #5cb85c; font-size: 3rem;   position: absolute; height: 80px; bottom: 0; width: 80%; padding-left: 40%; padding-top: 5%;">6</h2>
-                        </div>
-                    </div>
+                    <img src="~/Assets/img/people.png" style="position:relative;width:250px;height:200px;top:10%;" />
                 </div>
-                <div class="col-md-6">
-                    <div class="card card-block">
-                        <h5 class="card-title text-center">Модераторы</h5>
-                        <div class="area-chart inview">
-                            <h2 style="background-color: #848484; font-size: 3rem; position: absolute; height: 120px; bottom: 0;width: 80%;padding-left: 35%; padding-top: 12%;">10</h2>
-                        </div>
-                    </div>
+                <div class="col-md-6 text-center">
+                    <h2 style="font-size: 10rem; position: relative; height: 120px; top: 20%;width: 80%;">16</h2>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4">
-            <h3>Кол-во звонков в день </h3>
+            <h3 class="title">Кол-во звонков в день </h3>
             <div class="bar-chart inview" id="chart15"></div>
         </div>
 
         <div class="col-md-4">
-            <h3>Доля платформ</h3>
+            <h3 class="title">Доля платформ</h3>
             <div class="row">
-                <div class="bar-chart inview" id="chart12"></div>
+                <div class="col-md-6">
+                    <div class="bar-chart inview" id="chart12"></div>
+                </div>
+                <div class="col-md-6">
+                    <ul style="list-style:none;margin-top: 15%;">
+                        <li>
+                            <h3 style="color:#5cb85c">ГЗ - 46%</h3>
+                        </li>
+                        <li>
+                            <h3 style="color:#c70000">КЗ - 39%</h3>
+                        </li>
+                        <li>
+                            <h3 style="color:white;">Каталог - 15%</h3>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
         </div>
 
     </div>
@@ -224,7 +233,7 @@
                 animationEnabled: true,
                 backgroundColor: "transparent",
                 title: {
-                    fontColor: "#424242",
+                    fontColor: "white",
                     fontSize: 24,
                     horizontalAlign: "center",
                     text: "12%",
@@ -249,7 +258,7 @@
                 animationEnabled: true,
                 backgroundColor: "transparent",
                 title: {
-                    fontColor: "#424242",
+                    fontColor: "white",
                     fontSize: 24,
                     horizontalAlign: "center",
                     text: "11%",
@@ -274,7 +283,7 @@
                 animationEnabled: true,
                 backgroundColor: "transparent",
                 title: {
-                    fontColor: "#424242",
+                    fontColor: "white",
                     fontSize: 24,
                     horizontalAlign: "center",
                     text: "30%",
@@ -397,7 +406,7 @@
                 },
                 legend: {
                     dockInsidePlotArea: true,
-                    fontColor: "white",
+                    fontColor: "#424242",
                     fontSize: 16,
                     horizontalAlign: "right",
                     verticalAlign: "top"
@@ -436,7 +445,7 @@
                 },
                 legend: {
                     dockInsidePlotArea: true,
-                    fontColor: "white",
+                    fontColor: "#424242",
                     fontSize: 16,
                     horizontalAlign: "right",
                     verticalAlign: "top"
@@ -481,7 +490,7 @@
                 animationEnabled: true,
                 backgroundColor: "transparent",
                 axisX: {
-                    labelFontColor: "#f7f6f6",
+                    labelFontColor: "#424242",
                     labelFontSize: 18,
                     lineThickness: 0,
                     tickThickness: 0
@@ -494,16 +503,15 @@
                 },
                 data: [
                     {
-                        color: "#424242",
-                        indexLabelFontColor: "#5cb85c",
+                        color: "#424242",  
                         indexLabelFontFamily: "calibri",
                         indexLabelFontSize: 24,
                         indexLabelPlacement: "outside",
                         type: "bar",
                         dataPoints: [
-                            { y: 105, indexLabel: "105", label: "День" },
-                            { y: 500, indexLabel: "500", label: "Недель" },
-                            { y: 2000, indexLabel: "2000", label: "Месяц" }
+                            { y: 105, indexLabel: "105", label: "День", indexLabelFontColor: "white" },
+                            { y: 500, indexLabel: "500", label: "Недель", indexLabelFontColor: "#c70000" },
+                            { y: 2000, indexLabel: "2000", label: "Месяц", indexLabelFontColor: "#5cb85c" }
                         ]
                     }
                 ]
@@ -550,13 +558,11 @@
                         radius: "100%",
                         showInLegend: false,
                         startAngle: 180,
-                        indexLabelPlacement: "outside",
-                        indexLabelFontSize: 24,
                         type: "doughnut",
                         dataPoints: [
-                            { y: 46, indexLabel: "ГЗ {y}%", color: "#5cb85c" },
-                            { y: 39, indexLabel: "КЗ {y}%", color: "#c70000" },
-                            { y: 15, indexLabel: "Каталог {y}%", color: "white" }
+                            { y: 46, color: "#5cb85c" },
+                            { y: 39, color: "#c70000" },
+                            { y: 15, color: "white" }
                         ]
                     }
                 ]
